--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: dabae <dabae@student.42perpignan.fr>       +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/07/19 06:39:43 by dabae             #+#    #+#              #
+#    Updated: 2024/07/19 06:39:44 by dabae            ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = megaphone
 
 CC = c++
