cpp00 is ready to be pushed

--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: dabae <dabae@student.42perpignan.fr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/19 06:39:43 by dabae             #+#    #+#              #
-#    Updated: 2024/07/19 06:39:44 by dabae            ###   ########.fr        #
+#    Updated: 2024/08/01 11:03:51 by dabae            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ NAME = megaphone
 CC = c++
 FLAGS = -Wall -Werror -Wextra -std=c++98
 
-SRC = megaphone.cpp
+SRC = Megaphone.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
