--- a/cpp02/ex00/Makefile
+++ b/cpp02/ex00/Makefile
@@ -6,11 +6,11 @@
 #    By: dabae <dabae@student.42perpignan.fr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/22 16:16:53 by dabae             #+#    #+#              #
-#    Updated: 2024/07/23 12:06:18 by dabae            ###   ########.fr        #
+#    Updated: 2024/08/05 11:55:17 by dabae            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = a.out
+NAME = canonical 
 CC = c++
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
