cpp09 ex00 complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,10 @@
         "fstream": "cpp",
         "print": "cpp",
         "queue": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "list": "cpp",
+        "__tree": "cpp",
+        "map": "cpp",
+        "set": "cpp"
     }
 }
