--- a/cpp06/ex00/Makefile
+++ b/cpp06/ex00/Makefile
@@ -15,7 +15,7 @@
 
 # Compiler and flags
 CC		=	c++
-CFLAGS	=	-Wall -Werror -Wextra -std=c++98 -I.
+CFLAGS	=	-Wall -Werror -Wextra -std=c++98 -I. -g
 RM		=	rm -rf
 
 NAME	=	convert
