--- a/cpp08/ex00/Makefile
+++ b/cpp08/ex00/Makefile
@@ -10,13 +10,6 @@
 #                                                                              #
 # **************************************************************************** #
 
-#------------------------------------------------------------------------------#
-#                                  GENERICS                                    #
-#------------------------------------------------------------------------------#
-
-.PHONY: all bonus clean fclean re
-
-
 
 #------------------------------------------------------------------------------#
 #                                VARIABLES                                     #
@@ -33,7 +26,6 @@ SRCS	=	main.cpp
 OBJS	=	$(SRCS:.cpp=.o)
 INC		=	$(wildcard *.hpp)
 
-
 #------------------------------------------------------------------------------#
 #                                 TARGETS                                      #
 #------------------------------------------------------------------------------#
@@ -45,7 +37,7 @@ $(NAME): $(OBJS)
 	$(HIDE)$(CC) $(CFLAGS) $(OBJS) -o $@
 
 # Compiles sources into objects
-.cpp.o: $(SRCS) $(INC)
+%.o: %.cpp $(INC)
 	$(HIDE)$(CC) $(CFLAGS) -c $< -o $@
 
 # Removes objects
@@ -58,3 +50,5 @@ fclean: clean
 
 # Removes objects and executables and remakes
 re: fclean all
+
+.PHONY: all bonus clean fclean re
